# jaxframes

./: .gitignore  AUTO_JIT.md  BENCHMARKS.md  CLAUDE.md  DETAILS.md  GOAL.md  INSTALL.md  PLAN.md  README.md  STRINGPLAN.md  benchmark_analysis.py  benchmark_warmed.py  prompts??.md  pyproject.toml  run_benchmarks.py  test.ipynb  test_executor_basic.py  test_lazy_basic.py  test_ops_standalone.py  uv.toml  verify_ops.py
benchmarks/: benchmark_parallel_algorithms.py
docs/: DISTRIBUTED.md  LAZY_EXECUTION.md  OPTIMIZER.md  STAGE2_COMPLETE.md  STAGE4_IMPLEMENTATION_STATUS.md  index.md
examples/: auto_jit_example.py  basic_usage.py  distributed_example.py  lazy_execution_example.py  optimizer_example.py
src/jaxframes/: __init__.py
src/jaxframes/core/: __init__.py  frame.py  jit_utils.py  series.py  string_encoding.py  string_fastpaths.py
src/jaxframes/distributed/: __init__.py  fast_algorithms.py  frame.py  multi_column_distributed.py  operations.py  padding.py  parallel_algorithms.py  sharding.py  sharding_utils.py
src/jaxframes/lazy/: __init__.py  builder.py  codegen.py  collection.py  executor.py  expressions.py  optimizer.py  plan.py  rules.py  validator.py  visitor.py
src/jaxframes/ops/: __init__.py  aggregation.py  alias.py  base.py  binary.py  cast.py  column.py  comparison.py  literal.py  unary.py
src/jaxframes/testing/: __init__.py  comparison.py  generators.py
tests/: __init__.py  test_comparison_operators.py  test_distributed_multi_column.py  test_expressions.py  test_filter_execution.py  test_head_tail.py  test_lazy_execution.py  test_lazy_integration.py  test_lazy_operations.py  test_lazy_plan.py  test_logical_plans.py  test_multi_column_operations.py  test_new_optimizations.py  test_ops_expressions.py  test_optimizer.py  test_optimizer_passes.py  test_parallel_algorithms.py  test_string_operations.py
tests/benchmarks/: __init__.py  benchmark_lazy_execution.py  test_auto_jit_benchmarks.py  test_basic_benchmarks.py  test_jit_benchmarks.py  test_large_scale_benchmarks.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_basic_operations.py  test_datatypes.py  test_distributed.py  test_testing_framework.py
